# dagster-dbt-ecs-sample

./: README.md  pyproject.toml
dagster_project/: Dockerfile_dagster  Dockerfile_user_code  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  setup.py  workspace.yaml
dagster_project/dagster_project/: assets.py  definitions.py  project.py
dagster_project/dbt-project/: profiles.yml
terraform/: README.md
terraform/application/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/foundation/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
