[project]
name = "dagster_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-aws>=0.26.18",
    "dagster-dbt",
    "dagster-docker>=0.26.18",
    "dagster-postgres>=0.26.18",
    "dagster-webserver>=1.10.18",
    "dbt-snowflake>=1.9.4",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_project.definitions"
code_location_name = "dagster_project"
